--- a/projeto-interdisciplinar-api/package.json
+++ b/projeto-interdisciplinar-api/package.json
@@ -25,6 +25,8 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/validator": "^13.6.3",
+    "class-validator": "^0.13.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
