--- a/projeto-interdisciplinar-api/package.json
+++ b/projeto-interdisciplinar-api/package.json
@@ -22,10 +22,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.2",
     "@types/validator": "^13.6.3",
+    "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
