--- a/projeto-interdiciplinar/package.json
+++ b/projeto-interdiciplinar/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "deploy:ghdocs": "ng build --prod --output-path docs --base-href /projeto-interdiciplinar-gui/"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
