--- a/projeto-interdiciplinar/package.json
+++ b/projeto-interdiciplinar/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.2.0",
     "alife-file-to-base64": "0.0.4",
     "bootstrap": "^5.1.1",
+    "ngx-mask": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
