--- a/projeto-interdiciplinar/package.json
+++ b/projeto-interdiciplinar/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "alife-file-to-base64": "0.0.4",
     "bootstrap": "^5.1.1",
     "ngx-mask": "^12.0.0",
