--- a/projeto-interdiciplinar/angular.json
+++ b/projeto-interdiciplinar/angular.json
@@ -31,10 +31,10 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
             ],
             "scripts": [
-              "node_modules/@fortawesome/fontawesome-free/js/all.js"
+              "node_modules/@fortawesome/fontawesome-free/js/all.js",
             ]
           },
           "configurations": {
