alterado componente experiencia para ser responsivo

--- a/projeto-interdiciplinar/package.json
+++ b/projeto-interdiciplinar/package.json
@@ -22,6 +22,7 @@
     "@ng-select/ng-select": "^7.3.0",
     "alife-file-to-base64": "0.0.4",
     "bootstrap": "^5.1.1",
+    "cidades-estados-brasil-json": "^1.0.3",
     "ngx-mask": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
